--- a/Blog Application/Blog Application/appsettings.json
+++ b/Blog Application/Blog Application/appsettings.json
@@ -5,5 +5,22 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "ConnectionStrings": {
+        "DefaultConnection": ""
+    },
+    "JwtSettings": {
+        "Key": "",
+        "Issuer": "",
+        "Audience": "",
+        "ExpirationMinutes": 600
+    },
+    "EmailSettings": {
+        "SmtpServer": "",
+        "Port": 587,
+        "Email": "",
+        "ClientId": "",
+        "ClientSecret": "",
+        "EnableSsl": true
+    },
     "AllowedHosts": "*"
 }
