Implemented APIs for Like, Comment and Subscribe

--- a/Blog Application/Blog Application/Blog Application.csproj
+++ b/Blog Application/Blog Application/Blog Application.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Folder Include="DTO\LoggingDTOs\" />
     <Folder Include="DTO\RequestDTOs\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
