--- a/Blog Application/Blog Application/appsettings.json
+++ b/Blog Application/Blog Application/appsettings.json
@@ -5,8 +5,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ConnectionStrings": {
-        "DefaultConnection": ""
+    "MongoDbSettings": {
+        "ConnectionString": "",
+        "DatabaseName": ""
     },
     "JwtSettings": {
         "Key": "",
