--- a/Blog Application/Blog Application/appsettings.json
+++ b/Blog Application/Blog Application/appsettings.json
@@ -23,10 +23,10 @@
         "EnableSsl": true
     },
     "AWS": {
-        "AccessKey": "AKIAVIYX7DBMMZ2WMGGM",
-        "SecretKey": "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",
-        "Region": "ap-southeast-2",
-        "BucketName": "blog-post-v1"
+        "AccessKey": "",
+        "SecretKey": "",
+        "Region": "",
+        "BucketName": ""
     },
 
     "AllowedHosts": "*"
